--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul>
     </header>
     <div class="px-4 py-5 my-5 text-center text-light" id='hero'>
-      <img class="d-block mx-auto mb-4 img-thumbnail" id='my-image' src="image/baishali.jpg" width="150" height="150">
+      <img class="d-block mx-auto mb-4 img-thumbnail" id='my-image' src="baishali.jpg" width="150" height="150">
       <h1 class="display-5 fw-bold">Baishali Thapa</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Content Writing- Social Media Marketing- Proof Reading</p>
